--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "body-parser": "^1.18.0",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
     "highcharts": "^5.0.14",
     "material-ui": "^0.19.1",
+    "mongoose": "^4.11.10",
     "path": "^0.12.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
