--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.0",
+    "chart.js": "^2.6.0",
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
-    "highcharts": "^5.0.14",
     "material-ui": "^0.19.1",
     "mongoose": "^4.11.10",
     "path": "^0.12.7",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.6.2",
     "react-dom": "^15.6.1",
+    "react-highcharts": "^12.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^2.0.1",
@@ -35,6 +37,7 @@
     "style-loader": "^0.18.2"
   },
   "devDependencies": {
+    "babel-plugin-recharts": "^1.1.0",
     "nodemon": "^1.12.0",
     "redux-logger": "^3.0.6"
   }
